--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,5 +11,5 @@ phases:
     commands:
       - echo after build...
 artifacts:
-  files: '**/*'
+  files: './build/libs/blog.jar'
   discard-paths: no
